--- a/app/views/reminder_configuration/edit.html.erb
+++ b/app/views/reminder_configuration/edit.html.erb
@@ -1,8 +1,8 @@
-<h2><%= t('label_reminder_options') %></h2>
+<h2><%= l(:label_reminder_options) %></h2>
 
 <h3><%= l(:label_criteria_task) %></h3>
 
-<% form_for @configuration, :action => 'update', :method => "put",
+<% form_for @configuration, :action => :update, :method => :put,
             :url => reminder_configuration_path do |f| %>
 
   <%= error_messages_for(@configuration) %>
