send_to_groups option Added ability to send to groups of assigned users.

--- a/app/views/reminder_configuration/edit.html.erb
+++ b/app/views/reminder_configuration/edit.html.erb
@@ -50,7 +50,11 @@
   <%= f.check_box :send_to_custom_user %>
   <%= f.label :send_to_custom_user, l(:field_custom_user) %>
   <br/>
-
+  
+  <%= f.check_box :send_to_groups %>
+  <%= f.label :send_to_groups, l(:field_groups) %>
+  <br/>
+  
   <hr/>
   <%= f.submit l(:button_save) %>
 
