Include status in email body email body changed to match email notification subject.

--- a/app/views/reminder_all_mailer/_issues.text.erb
+++ b/app/views/reminder_all_mailer/_issues.text.erb
@@ -1,6 +1,6 @@
 <% if issues.any? %>
   <%= message %>
   <% issues.each do |issue| -%>
-    * <%= issue.due_date %> - <%= "#{issue.project} - #{issue.tracker} ##{issue.id}: #{issue.subject}" %>
+    * <%= issue.due_date %> [<%= "#{issue.project} - #{issue.tracker} ##{issue.id}] (#{issue.status}) #{issue.subject}" %>
   <% end -%>
 <% end %>
